--- a/project-classification-teams-day6/style.css
+++ b/project-classification-teams-day6/style.css
@@ -41,6 +41,10 @@ table {
     right: 10px;
 }
 
+h1 {
+    background: rgba(255, 255, 255, 0.7);
+}
+
 table {
     border: 2px solid white;
     border-collapse: collapse;
