--- a/project-players-raffle-2-day8/style.css
+++ b/project-players-raffle-2-day8/style.css
@@ -5,9 +5,14 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     padding-bottom: 20vh;
+    font-family: 25px;
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
     text-align: center;
     padding: 20px;
 }
@@ -46,17 +51,23 @@ h2 {
     border-radius: 33px;
 }
 
-#card-player h3 {
-    text-align: center;
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10%;
+    border: 3px solid blue;
+    background: white;
+    opacity: 0.7;
 }
 
-.card-image {
-    border: 1px solid black;
-    height: 100px;
-    margin: 10px;
+.card-image-player, .card-image-machine {
+    width: 100%;
+    height: 100%;
 }
 
-.card-image img {
+.card-image-player img, .card-image-machine img {
     width: 100%;
     height: 100%;
 }
@@ -72,7 +83,26 @@ h2 {
     margin: 20px 10px;
 }
 
-.resultado-final {
+.card-status p {
+    margin-bottom: 2rem;
+}
+
+.card-title-player, .card-title-machine {
+    margin: 0 auto;
+    opacity: 0.7;
+    color: #000;
+    z-index: 100;
+    padding: 10px;
+    font-size: 20px;
+}
+
+.options-player, .options-machine {
+    margin: 0 auto;
+    padding: 10px;
+    z-index: 100;
+}
+
+.final-result {
     color: white;
     font-size: 2rem;
     text-transform: uppercase;
@@ -80,10 +110,7 @@ h2 {
     padding: 1rem;
     border: 2px solid black;
     background-color: black;
-}
-
-.--spacing {
-    margin-left: 2.5rem;
+    opacity: 0.6;
 }
 
 form {
@@ -92,26 +119,5 @@ form {
 }
 
 .wrapper {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-
-.card-subtitle {
-    z-index: 2;
-    position: absolute;
-    top: 16px;
-    left: 37px;
-    font-weight: 800;
-    text-transform: uppercase;
-}
-
-#card {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.card-status p {
-    margin-bottom: 2rem;
+    margin: 30px;
 }
