--- a/project-certificate-day10/style.css
+++ b/project-certificate-day10/style.css
@@ -6,11 +6,12 @@
 
 body {
     background-color: brown;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-section {
-    margin-top: 10px;
-    padding: 15px;
+header {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -18,24 +19,31 @@ section {
 }
 
 .image-header {
-    width: 80%;
+    width: 20%;
+    height: 20%;
     border-radius: 50%;
 }
 
+h1 {
+    padding: 10px;
+}
+
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 10px;
     padding: 15px;
     border: 1px solid black;
     background-color: white;
-    opacity: 0.5;
-    margin: 0 auto;
+    max-width: 60%;
+    max-height: 60%;
+    opacity: 0.7;
+    border-radius: 5%;
 }
 
 .projects {
     margin: 10px;
+}
+
+.projects li {
+    padding: 5px;
 }
 
 .project-image {
@@ -44,4 +52,4 @@ section {
     padding: 5px;
 }
 
-/* Marial design pallete: cores CSS */
+/* Material design pallete: cores CSS */
