--- a/project-players-raffle/style.css
+++ b/project-players-raffle/style.css
@@ -5,76 +5,141 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     padding-bottom: 20vh;
+    font-family: 20px;
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
     text-align: center;
     padding: 20px;
-    background: rgba(255, 255, 255, 0.7);
+}
+
+.container img {
+    margin: 0 auto;
 }
 
 .page-title {
-    color: #0000;
+    color: #ffffff;
     margin: 5px 0;
 }
 
-button {
+button, .button-play {
     padding: .8rem 1.5rem;
-    margin: 1rem 0;
+    margin: 20px auto;
     border-radius: 5px;
     border: none;
     font-size: 1rem;
+    padding: 10px;
 }
 
 h2 {
-    color: black;
+    color: white;
+    margin: 10px;
 }
 
-#card-player {
+#card-player, #card-machine {
     width: 360px;
     height: 500px;
     overflow: auto;
     border-radius: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     margin: 0 auto;
     display: flex;
     align-items: flex-end;
+    position: relative;
+    background-size: 350px 300px;
+    background-repeat: no-repeat;
+    background-position-x: 5px;
+    background-position-y: 10px;
+    border-radius: 33px;
 }
 
-#card-player h3 {
-    text-align: center;
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10%;
+    border: 3px solid blue;
+    background: white;
+    opacity: 0.7;
 }
 
-.card-image {
-    border: 1px solid black;
-    height: 100px;
-    margin: 10px;
+.card-image-player, .card-image-machine {
+    width: 100%;
+    height: 100%;
 }
 
-.card-image img {
+.card-image-player img, .card-image-machine img {
     width: 100%;
     height: 100%;
 }
 
 .card-status {
     height: 160px;
-    margin: 1.5rem;
+    margin: 2rem;
+    color: white;
+    z-index: 2;
 }
 
 .card-status input {
     margin: 20px 10px;
 }
 
-.options {
-    color: black;
+.card-status p {
+    margin-bottom: 2rem;
 }
 
-#buttonPlay {
-    font-weight: bold;
-    color: black;
+.card-title-player, .card-title-machine {
+    margin: 0 auto;
+    opacity: 0.7;
+    color: #000;
+    z-index: 100;
+    padding: 10px;
+    font-size: 20px;
 }
 
-.playersNames, .result {
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 15px;
+.options-player, .options-machine {
+    margin: 0 auto;
+    padding: 10px;
+    z-index: 100;
+}
+
+.final-result {
+    color: white;
+    font-size: 2rem;
+    text-transform: uppercase;
+    font-weight: bolder;
+    padding: 1rem;
+    border: 2px solid black;
+    background-color: black;
+    opacity: 0.6;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+.wrapper-player, .wrapper-machine {
+    margin: 30px;
+}
+
+#score, #amount-cards, .result-final {
+    color: #000;
+    background-color: #ffffff;
+    opacity: 0.8;
+    padding: 10px;
+    margin: 10px auto;
+}
+
+#volleybalBasic {
+    margin: 10px;
+}
+
+#results {
+    margin: 0 auto;
 }
